added login screen

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="description"
-      content="Ersys Admin Template"
-    />
+    <meta name="description" content="Ersys Human Resource Information System" />
+		<meta name="keywords" content="HRIS,HCMS,HR,HRIS SaaS" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Ersys Admin Template</title>
+    <title>Ersys</title>
   </head>
-  <body>
+  <body themes="light">
     <div id="root-container"></div>
   </body>
 </html>
