enhance this repo as subdirecotry

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="Ersys Human Resource Information System" />
-		<meta name="keywords" content="HRIS,HCMS,HR,HRIS SaaS" />
+    <meta name="description" content="Admin Template" />
+		<meta name="keywords" content="Admin Template,React Admin Template,Bootstrap Admin Template, Bootstrap 4" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <base href="%PUBLIC_URL%/admin-template" />
     <title>Ersys</title>
   </head>
   <body themes="light">
